# jenkins-terminal

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
jenkins_terminal/: build.py  builds.py  config.py  main.py  output.py  status.py
