[tool.poetry]
name = "jenkins-terminal"
version = "0.5.3"
description = "A CLI tool for Jenkins"
authors = ["Loki <yongxiang.zhan@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.3"
typer = "^0.10.0"
rich = "^12.6.0"
pyyaml = "^6.0.1"
python-jenkins = "^1.8.2"

[tool.poetry.scripts]
jenkins = "jenkins_terminal.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
